@@ -1,3 +1,7 @@
+Mon Jun 04 06:23:02 GMT 2012  Olly Betts <olly@survex.com>
+
+	* python/smoketest2.py: Test xapian.open_stub() is wrapped.
+
 Mon Jun 04 05:01:17 GMT 2012  Olly Betts <olly@survex.com>
 
 	* python/smoketest2.py: Add tests that the database factory functions
